# libid2

./: .gitignore  README.md  TODOs  configure.ac  makefile.am  makefile.in  todolist
debug/: config.h  config.status  libtool  makefile  public  secret  signature.b  user.key  userid.txt
debug/src/: a25519  a25519.c.lo  a25519.lo  i25519  libid2.la  makefile  s25519  ti25519.lo  ti25519_client.lo  ti25519_server.lo  ts25519.lo  tsi25519.c.lo  tsi25519.lo
debug/src/.libs/: a25519  i25519  libid2.la  libid2.lai  libid2.so.0.0.0  lt-a25519  lt-i25519  lt-s25519  s25519
debug/src/internals/: proto.lo  tnc.c.lo  tnc.lo
debug/src/internals/sch25519/: proto.lo  static.lo
debug/src/internals/tnc/: proto.lo  static.lo
debug/src/internals/tnc25519/: proto.lo  static.lo
debug/src/utils/: asn1util.lo  bufhelp.lo  futil.lo  jbase64.lo  simplesock.lo
deprecate/: .gitignore  README.md  makefile  readme
deprecate/deprecate/: bls_ibi.h  bls_ibi.hpp  bls_ibi_cwrap.cpp  bls_ibi_kh.cpp  bls_ibi_tight.cpp  bls_keygen.c  bls_sign.c  bls_tight.cpp  bls_tight.h  bls_tight.hpp  bls_tight_cwrap.cpp  bls_verify.c  futil.cpp  futil.hpp  i25519.cpp  i25519_cwrap.cpp  sample.ref  vbls_opti.cpp
deprecate/deprecate/hold/: fypibi.c  tight_bls.c
deprecate/include/: bls.h  bls.hpp  ecc.h  ecc.hpp  i25519.h  i25519.hpp  id2.h  jbase64.h  ptdebug.h  vbls.h  vbls.hpp
deprecate/main/: main.cpp
deprecate/newer/: client.cpp  i25519.c  s25519.c  server.cpp  ti25519.cpp  ts25519.cpp
deprecate/params/: d1357.param  d192.param  d256.param  d359.param  d407.param  d522.param  d677.param  mntcurves.txt
deprecate/params/insecure/: a160.param  a224.param  a256.param
deprecate/res/: javabigint_schnorrtest.csv  schnorr_test.txt
deprecate/res/bls/: message  public  secret  signature
deprecate/res/c25519/: message  public  secret  signature
deprecate/res/i25519/: id  public  secret  usk
deprecate/res/khblsibi/: public  secret  usk
deprecate/res/tmp/: public  secret  usk
deprecate/res/vbls/: message
deprecate/res/vblsibi/: public  secret  usk  usk359.false
deprecate/sample/: id2demo.c
deprecate/src/: asn1util.c  bls.cpp  bls_cwrap.cpp  ecc.cpp  ecc_cwrap.cpp  futil.c  i25519.cpp  i25519_cwrap.cpp  jbase64.c  simplesock.c  vbls.cpp  vbls_cwrap.cpp
deprecate/test/: bls.c  ecc_paramgen.c  ed25519.c  fypibi.c  hextest.cpp  i25519.c  kh_ibi.c  schnorr.c  tight_bls.c
src/: a25519.c.cpp  a25519.cpp  a25519.h  a25519.hpp  asn1util.c  asn1util.h  futil.c  futil.h  i25519.c  id2.c.cpp  id2.cpp  id2.h  id2.hpp  makefile.am  makefile.in  s25519.c  simplesock.c  simplesock.h  ti25519.cpp  ti25519_client.cpp  ti25519_server.cpp  ts25519.cpp  tsi25519.c.cpp  tsi25519.cpp  tsi25519.h  tsi25519.hpp  wks.vim
src/internals/: cmacro.h  ifcall.hpp  internal.hpp  internals.hpp  proto.cpp  proto.hpp  tnc.c.cpp  tnc.cpp  tnc.h  tnc.hpp
src/internals/rss25519/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/rtw25519/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/sch/: proto.cpp
src/internals/sch25519/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/template/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/tnc/: proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/tnc25519/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/tsc25519/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/internals/twn25519/: base.hpp  proto.cpp  proto.hpp  static.cpp  static.hpp
src/tests/: a25519.c  ezec.c  i25519.c
src/utils/: bufhelp.c  bufhelp.h  debug.h  futil.c  jbase64.c  simplesock.c  simplesock.h
